--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@discordjs/builders": "^0.8.2",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "@iamtraction/google-translate": "^1.1.2",
     "@magenta/music": "^1.23.1",
     "axios": "^0.21.1",
     "discord-api-types": "^0.24.0",
